Initialized project structure with in-memory data store, Dijkstra-based route finder, and base configuration files